package ucf.assignments;

import javafx.event.ActionEvent;
import javafx.fxml.FXML;

public class ListManagerController {
    //  create object of class ListsModel

    @FXML
    public void addListClicked(ActionEvent actionEvent) {
        //  call addList() from ListsModel
    }

    @FXML
    public void removeListClicked(ActionEvent actionEvent) {
        //  call removeList() from ListsModel
    }

    @FXML
    public void editListTitleClicked(ActionEvent actionEvent) {
        //  call editTitle() from ListsModel
    }

    @FXML
    public void addItemClicked(ActionEvent actionEvent) {
        //  call addItem() from ListsModel
    }

    @FXML
    public void removeItemClicked(ActionEvent actionEvent) {
        //  call removeItem() from ListsModel
    }

    @FXML
    public void editDescClicked(ActionEvent actionEvent) {
        //  call editDesc() from ListsModel
    }

    @FXML
    public void editDueDateClicked(ActionEvent actionEvent) {
        //  call editDueDate() from ListsModel
    }

    @FXML
    public void markAsCompleteClicked(ActionEvent actionEvent) {
        //  call markComplete() from ListsModel
    }

    @FXML
    public void displayIncompleteClicked(ActionEvent actionEvent) {
        //  call displayIncomplete() from ListsModel
    }

    @FXML
    public void displayCompletedClicked(ActionEvent actionEvent) {
        //  call displayCompleted() from ListsModel
    }

    @FXML
    public void exportListClicked(ActionEvent actionEvent) {
        //  call exportList() from ListsModel
    }

    @FXML
    public void exportAllListsClicked(ActionEvent actionEvent) {
        //  call exportAllLists() from ListsModel
    }

    @FXML
    public void importListClicked(ActionEvent actionEvent) {
        //  call importList() from ListsModel
    }

    @FXML
    public void importListsClicked(ActionEvent actionEvent) {
        //  call importAllLists() from ListsModel
    }
}
