package ucf.assignments;

public class ListsModel {
    //  create private string input
    //  create arraylist of List object

    public void addList() {
        //  add new item object list to the arraylist titled "List #"
    }

    public void removeList() {
        //  remove the selected item object list from the arraylist
    }

    public void editTitle() {
        //  take the list/task selected's title and prompt for user input for the new list title
    }

    public void addItem() {
        //  prompt for user input for the task
        //  prompt for user input for the due date
        //  prompt for user input for the description
        //  add new item to the item object list
    }

    public void removeItem() {
        //  remove the selected item from the item object list
    }

    public void editDesc() {
        //  take the task selected's description and prompt for user input for the new description
    }

    public void editDueDate() {
        //  take the task selected's due date and prompt for user input for the new due date
    }

    public void markComplete() {
        //  set the item's boolean to true
    }

    public void displayIncomplete() {
        //  check for every item with the complete boolean set to false
        //  display each item
    }

    public void displayComplete() {
        //  check for every item with the complete boolean set to true
        //  display each item
    }

    public void exportList() {
        //  export the list in a formatted format in a txt file (not sure how im going to do that yet)
    }

    public void exportAllLists() {
        //  export the arraylist in a formatted format in a txt file (not sure how im going to do that yet)
    }

    public void importList() {
        //  import txt files and use a reader to add the list into the arraylist
    }

    public void importAllLists() {
        //  import txt files and use a reader to add the lists into the arraylist
    }
}
